--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
     <title>Trivia by Mark Kazanski</title>
 </head>
 <body>
+
+    <h1>Trivia</h1>
+
+    <div id="question"></div>
+
+    <div id="answer"></div>
     
 </body>
 </html>
