--- a/index.html
+++ b/index.html
@@ -15,13 +15,22 @@
 </head>
 <body>
 
-    <h1>Trivia</h1>
-    
-    <div id="seconds-left"></div>
-
-    <div id="question"></div>
-
-    <div id="answer"></div>
+<div class="container-fluid">
+    <div class="container">
+        <h1>Trivia</h1>
+        <div class="jumbotron">
+            <div id="seconds-left"></div>
+        </div>
+        <div class="row">
+            <div class="col-md-12">
+                <div id="question"></div>
+            </div>
+            <div class="col-md-12">
+                <div id="answer"></div>
+            </div>
+        </div>
+    </div>
+</div>
     
 </body>
 </html>
