--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
 
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="assets/javascript/app2.js"></script> <!--Changed to app2-->
@@ -17,7 +18,7 @@
 
 <div class="container-fluid">
     <div class="container">
-        <h1>Trivia</h1>
+        <h1>Trivia by Mark Kazanski</h1>
         <div class="jumbotron">
             <div id="seconds-left"></div>
         </div>
